added service and inmemory repo
