# ratelimiter-service/src/main/java/com/example/ratelimiter/controller/RateLimiterController.java
@@ -5,8 +5,10 @@ import com.example.ratelimiter.api.model.CreateRateLimitRequest;
 import com.example.ratelimiter.api.model.CreateRateLimitResponse;
 import com.example.ratelimiter.api.model.GetRateLimitResponse;
 import com.example.ratelimiter.api.model.RateLimitDuration;
+import com.example.ratelimiter.dal.RateLimit;
 import com.example.ratelimiter.service.RateLimiterService;
 import com.example.ratelimiter.utils.DurationConvertor;
+import com.example.ratelimiter.utils.MethodEnumConvertor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -33,19 +35,32 @@ public class RateLimiterController implements RatelimiterApi {
     }
 
     @Override
-    public ResponseEntity<GetRateLimitResponse> getRateLimiter(String id) {
+    public ResponseEntity<GetRateLimitResponse> getRateLimiterById(String id) {
+        RateLimit rateLimit = rateLimiterService.getRateLimit(id);
+        return getRateLimitResponseResponseEntity(rateLimit);
+    }
+
+    @Override
+    public ResponseEntity<GetRateLimitResponse> getRateLimiter(
+            String service, String uri, String method) {
+        RateLimit rateLimit = rateLimiterService.getRateLimit(service, uri, method);
+        return getRateLimitResponseResponseEntity(rateLimit);
+    }
+
+    private static ResponseEntity<GetRateLimitResponse> getRateLimitResponseResponseEntity(
+            RateLimit rateLimit) {
         return ResponseEntity.ok(
                 GetRateLimitResponse.builder()
-                        .id(id)
-                        .service("serviceA")
-                        .api("/some/uri")
-                        .method(GetRateLimitResponse.MethodEnum.GET)
+                        .id(rateLimit.getId())
+                        .service(rateLimit.getService())
+                        .api(rateLimit.getUri())
+                        .method(MethodEnumConvertor.convert(rateLimit.getMethod()))
                         .duration(
                                 RateLimitDuration.builder()
-                                        .value(60)
+                                        .value(rateLimit.getDuration().getSeconds())
                                         .unit(RateLimitDuration.UnitEnum.SECONDS)
                                         .build())
-                        .limit(10)
+                        .limit(rateLimit.getLimit())
                         .build());
     }
 }
